# framework

./: CMakeLists.txt  Doxyfile  framework_gl.md.html
common/: audio.cpp  audio.h  camera.cpp  camera.h  config.h  core.cpp  core.h  entity.cpp  entity.h  input.cpp  input.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  shader.cpp  shader.h  sound.cpp  sound.h  sprite.cpp  sprite.h  texture.cpp  vector2.cpp  vector2.h  wav.cpp  wav.h
common/shaders/: sprite.vert
demo/: circle.cpp  circle.h  circlepoint.cpp  circlepoint.h  demo.cpp  player.cpp  player.h  scene1.cpp  scene1.h  scene2.cpp  scene2.h  scene3.cpp  scene3.h  scene4.cpp  scene4.h  scene5.cpp  scene5.h
demo/assets/: bar32.tga  brug.tga  circle.tga  cool.tga  doge.tga  empty_circle.tga  lel.tga  whoohh.tga
